--- a/index.html
+++ b/index.html
@@ -95,11 +95,45 @@ function updateGraph() {
                 scales: {
                     yAxes: [{
                         ticks: {
+                            stepSize: 86400,
                             //beginAtZero: true
                         },
                         stacked: true,
-                        //type: 'logarithmic'
                     }]
+                },
+                tooltips: {
+                    callbacks: {
+                        label: function(tooltipItem, data) {
+                            var label = data.datasets[tooltipItem.datasetIndex].label || '';
+
+                            if (label) {
+                                label += ': ';
+                            }
+
+                            let seconds = parseInt(tooltipItem.yLabel);
+                            let minutes = Math.floor(seconds / 60);
+                            seconds %= 60;
+                            let hours = Math.floor(minutes / 60);
+                            minutes %= 60;
+                            let days = Math.floor(hours / 24);
+                            hours %= 24;
+
+                            let duration = '';
+                            if (days > 0) {
+                                duration += days + ' day(s), ';
+                            }
+                            if (hours > 0) {
+                                duration += hours.toString().padStart(2, '0') + ':';
+                            }
+                            // if (minutes > 0) {
+                            //     duration += minutes + ':';
+                            // }
+                            duration += minutes.toString().padStart(2, '0') + ':' + seconds.toString().padStart(2, '0')
+
+                            label += duration;
+                            return label;
+                        }
+                    }
                 }
             }
         };
