--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@ function updateGraph() {
         console.log('startTimestamp', startTimestamp);
         console.log('now', 1608876296);
 
+        const timeDivisor = 60/100;
+
         let chartData = {
             type: 'bar',
             data: {
@@ -95,13 +97,40 @@ function updateGraph() {
                 scales: {
                     yAxes: [{
                         ticks: {
-                            stepSize: 1,
+                            //stepSize: 1,
                             //beginAtZero: true
+                            callback: function(value, index, values) {
+                                if (value.toString().startsWith('5')) return null;
+                                if (value.toString().startsWith('7')) return null;
+                                if (value.toString().startsWith('8')) return null;
+                                if (value.toString().startsWith('9')) return null;
+
+                                let seconds = Math.floor(parseFloat(value) * timeDivisor);
+                                let minutes = Math.floor(seconds / 60);
+                                seconds %= 60;
+                                let hours = Math.floor(minutes / 60);
+                                minutes %= 60;
+                                let days = Math.floor(hours / 24);
+                                hours %= 24;
+
+                                let str = '';
+
+                                if (days > 0) {
+                                    str += days + ' day(s), ';
+                                }
+                                if (hours > 0) {
+                                    str += hours.toString().padStart(2, '0') + ':';
+                                }
+                                str += minutes.toString().padStart(2, '0') + ':' + seconds.toString().padStart(2, '0');
+
+                                return str;
+                            }
                         },
                         stacked: true,
+                        type: 'logarithmic',
                         scaleLabel: {
                             display: true,
-                            labelString: 'Days'
+                            labelString: 'Duration',
                         }
                     }],
                 },
@@ -114,7 +143,7 @@ function updateGraph() {
                                 label += ': ';
                             }
 
-                            let seconds = Math.floor(parseFloat(tooltipItem.yLabel) * 86400);
+                            let seconds = Math.floor(parseFloat(tooltipItem.yLabel));
                             let minutes = Math.floor(seconds / 60);
                             seconds %= 60;
                             let hours = Math.floor(minutes / 60);
@@ -157,11 +186,15 @@ function updateGraph() {
                 stack: member.name,
                 minBarLength: 2
             };
-            for (let day in member.completion_day_level) {
+            for (let day = 1; day <= 31; ++day) {
                 for (let part of [1, 2]) {
-                    let ts = member.completion_day_level[day][part].get_star_ts;
-                    let durationInSeconds = ts - startTimestamp - 86400 * parseInt(day);
-                    dataset.data.push(durationInSeconds / 86400);
+                    if (member.completion_day_level[day] && member.completion_day_level[day][part]) {
+                        let ts = member.completion_day_level[day][part].get_star_ts;
+                        let durationInSeconds = ts - startTimestamp - 86400 * parseInt(day);
+                        dataset.data.push(durationInSeconds / timeDivisor);
+                    } else {
+                        dataset.data.push(null);
+                    }
                     dataset.backgroundColor.push(backgroundColors[i]);
                     dataset.borderColor.push(borderColors[i]);
                     if (i == 0) {
@@ -211,7 +244,7 @@ textarea {
 <body>
 
 <div id="wrap">
-    <textarea id="json">{"members":{"225901":{"id":"225901","completion_day_level":{"4":{"1":{"get_star_ts":"1607219099"},"2":{"get_star_ts":"1607230299"}},"6":{"2":{"get_star_ts":"1607231247"},"1":{"get_star_ts":"1607231047"}},"1":{"1":{"get_star_ts":"1606825135"},"2":{"get_star_ts":"1606825183"}},"2":{"1":{"get_star_ts":"1607217004"},"2":{"get_star_ts":"1607217254"}},"3":{"2":{"get_star_ts":"1607218453"},"1":{"get_star_ts":"1607218043"}},"5":{"1":{"get_star_ts":"1607229175"},"2":{"get_star_ts":"1607229941"}}},"last_star_ts":"1607231247","local_score":14,"global_score":0,"name":"Rhys Davies","stars":12},"420711":{"last_star_ts":"1607936872","local_score":50,"completion_day_level":{"11":{"2":{"get_star_ts":"1607674031"},"1":{"get_star_ts":"1607671711"}},"6":{"2":{"get_star_ts":"1607231954"},"1":{"get_star_ts":"1607231855"}},"4":{"2":{"get_star_ts":"1607085511"},"1":{"get_star_ts":"1607071090"}},"14":{"2":{"get_star_ts":"1607936872"},"1":{"get_star_ts":"1607933511"}},"13":{"2":{"get_star_ts":"1607843597"},"1":{"get_star_ts":"1607839838"}},"1":{"2":{"get_star_ts":"1606817713"},"1":{"get_star_ts":"1606817175"}},"8":{"1":{"get_star_ts":"1607428072"},"2":{"get_star_ts":"1607431483"}},"2":{"1":{"get_star_ts":"1606887172"},"2":{"get_star_ts":"1606887453"}},"10":{"1":{"get_star_ts":"1607577723"},"2":{"get_star_ts":"1607583086"}},"9":{"2":{"get_star_ts":"1607576481"},"1":{"get_star_ts":"1607574553"}},"5":{"1":{"get_star_ts":"1607184997"},"2":{"get_star_ts":"1607185713"}},"3":{"2":{"get_star_ts":"1606988302"},"1":{"get_star_ts":"1606986986"}},"7":{"1":{"get_star_ts":"1607323202"},"2":{"get_star_ts":"1607324110"}},"12":{"1":{"get_star_ts":"1607836873"},"2":{"get_star_ts":"1607837743"}}},"id":"420711","name":"Jamie","stars":28,"global_score":0},"22105":{"global_score":0,"stars":50,"name":"printfn","completion_day_level":{"19":{"2":{"get_star_ts":"1608365456"},"1":{"get_star_ts":"1608360572"}},"18":{"2":{"get_star_ts":"1608283970"},"1":{"get_star_ts":"1608282736"}},"15":{"2":{"get_star_ts":"1608010763"},"1":{"get_star_ts":"1608009169"}},"12":{"2":{"get_star_ts":"1607756348"},"1":{"get_star_ts":"1607755740"}},"11":{"1":{"get_star_ts":"1607670211"},"2":{"get_star_ts":"1607671025"}},"23":{"2":{"get_star_ts":"1608702846"},"1":{"get_star_ts":"1608700564"}},"4":{"1":{"get_star_ts":"1607065548"},"2":{"get_star_ts":"1607066426"}},"6":{"2":{"get_star_ts":"1607231562"},"1":{"get_star_ts":"1607231287"}},"25":{"2":{"get_star_ts":"1608873180"},"1":{"get_star_ts":"1608873169"}},"1":{"2":{"get_star_ts":"1606805157"},"1":{"get_star_ts":"1606805081"}},"8":{"2":{"get_star_ts":"1607407937"},"1":{"get_star_ts":"1607407596"}},"17":{"2":{"get_star_ts":"1608184324"},"1":{"get_star_ts":"1608183533"}},"9":{"2":{"get_star_ts":"1607496144"},"1":{"get_star_ts":"1607495809"}},"21":{"1":{"get_star_ts":"1608533890"},"2":{"get_star_ts":"1608534373"}},"7":{"2":{"get_star_ts":"1607318873"},"1":{"get_star_ts":"1607317927"}},"3":{"2":{"get_star_ts":"1606985637"},"1":{"get_star_ts":"1606985401"}},"22":{"2":{"get_star_ts":"1608614668"},"1":{"get_star_ts":"1608613508"}},"20":{"1":{"get_star_ts":"1608444729"},"2":{"get_star_ts":"1608446246"}},"24":{"1":{"get_star_ts":"1608861205"},"2":{"get_star_ts":"1608861747"}},"14":{"2":{"get_star_ts":"1607923196"},"1":{"get_star_ts":"1607922723"}},"13":{"1":{"get_star_ts":"1607836055"},"2":{"get_star_ts":"1607837445"}},"2":{"2":{"get_star_ts":"1606885508"},"1":{"get_star_ts":"1606885392"}},"10":{"2":{"get_star_ts":"1607578636"},"1":{"get_star_ts":"1607576918"}},"16":{"1":{"get_star_ts":"1608095281"},"2":{"get_star_ts":"1608097299"}},"5":{"2":{"get_star_ts":"1607149021"},"1":{"get_star_ts":"1607148767"}}},"id":"22105","local_score":142,"last_star_ts":"1608873180"}},"event":"2020","owner_id":"225901"}</textarea>
+    <textarea id="json">{"owner_id":"225901","members":{"420711":{"name":"Jamie","stars":28,"local_score":50,"last_star_ts":"1607936872","completion_day_level":{"2":{"2":{"get_star_ts":"1606887453"},"1":{"get_star_ts":"1606887172"}},"4":{"2":{"get_star_ts":"1607085511"},"1":{"get_star_ts":"1607071090"}},"12":{"1":{"get_star_ts":"1607836873"},"2":{"get_star_ts":"1607837743"}},"9":{"1":{"get_star_ts":"1607574553"},"2":{"get_star_ts":"1607576481"}},"3":{"1":{"get_star_ts":"1606986986"},"2":{"get_star_ts":"1606988302"}},"5":{"2":{"get_star_ts":"1607185713"},"1":{"get_star_ts":"1607184997"}},"1":{"2":{"get_star_ts":"1606817713"},"1":{"get_star_ts":"1606817175"}},"11":{"1":{"get_star_ts":"1607671711"},"2":{"get_star_ts":"1607674031"}},"8":{"2":{"get_star_ts":"1607431483"},"1":{"get_star_ts":"1607428072"}},"7":{"1":{"get_star_ts":"1607323202"},"2":{"get_star_ts":"1607324110"}},"6":{"2":{"get_star_ts":"1607231954"},"1":{"get_star_ts":"1607231855"}},"14":{"2":{"get_star_ts":"1607936872"},"1":{"get_star_ts":"1607933511"}},"10":{"1":{"get_star_ts":"1607577723"},"2":{"get_star_ts":"1607583086"}},"13":{"2":{"get_star_ts":"1607843597"},"1":{"get_star_ts":"1607839838"}}},"global_score":0,"id":"420711"},"225901":{"id":"225901","global_score":0,"name":"Rhys Davies","stars":15,"completion_day_level":{"6":{"2":{"get_star_ts":"1607231247"},"1":{"get_star_ts":"1607231047"}},"7":{"2":{"get_star_ts":"1608882788"},"1":{"get_star_ts":"1608882459"}},"1":{"2":{"get_star_ts":"1606825183"},"1":{"get_star_ts":"1606825135"}},"8":{"1":{"get_star_ts":"1608883981"}},"3":{"2":{"get_star_ts":"1607218453"},"1":{"get_star_ts":"1607218043"}},"5":{"2":{"get_star_ts":"1607229941"},"1":{"get_star_ts":"1607229175"}},"2":{"1":{"get_star_ts":"1607217004"},"2":{"get_star_ts":"1607217254"}},"4":{"1":{"get_star_ts":"1607219099"},"2":{"get_star_ts":"1607230299"}}},"local_score":17,"last_star_ts":"1608883981"},"22105":{"local_score":142,"last_star_ts":"1608873180","completion_day_level":{"24":{"1":{"get_star_ts":"1608861205"},"2":{"get_star_ts":"1608861747"}},"22":{"1":{"get_star_ts":"1608613508"},"2":{"get_star_ts":"1608614668"}},"1":{"2":{"get_star_ts":"1606805157"},"1":{"get_star_ts":"1606805081"}},"14":{"2":{"get_star_ts":"1607923196"},"1":{"get_star_ts":"1607922723"}},"7":{"1":{"get_star_ts":"1607317927"},"2":{"get_star_ts":"1607318873"}},"6":{"2":{"get_star_ts":"1607231562"},"1":{"get_star_ts":"1607231287"}},"19":{"1":{"get_star_ts":"1608360572"},"2":{"get_star_ts":"1608365456"}},"23":{"1":{"get_star_ts":"1608700564"},"2":{"get_star_ts":"1608702846"}},"13":{"2":{"get_star_ts":"1607837445"},"1":{"get_star_ts":"1607836055"}},"17":{"2":{"get_star_ts":"1608184324"},"1":{"get_star_ts":"1608183533"}},"21":{"1":{"get_star_ts":"1608533890"},"2":{"get_star_ts":"1608534373"}},"12":{"2":{"get_star_ts":"1607756348"},"1":{"get_star_ts":"1607755740"}},"4":{"1":{"get_star_ts":"1607065548"},"2":{"get_star_ts":"1607066426"}},"20":{"2":{"get_star_ts":"1608446246"},"1":{"get_star_ts":"1608444729"}},"25":{"2":{"get_star_ts":"1608873180"},"1":{"get_star_ts":"1608873169"}},"11":{"1":{"get_star_ts":"1607670211"},"2":{"get_star_ts":"1607671025"}},"8":{"1":{"get_star_ts":"1607407596"},"2":{"get_star_ts":"1607407937"}},"18":{"2":{"get_star_ts":"1608283970"},"1":{"get_star_ts":"1608282736"}},"10":{"2":{"get_star_ts":"1607578636"},"1":{"get_star_ts":"1607576918"}},"15":{"1":{"get_star_ts":"1608009169"},"2":{"get_star_ts":"1608010763"}},"2":{"1":{"get_star_ts":"1606885392"},"2":{"get_star_ts":"1606885508"}},"16":{"1":{"get_star_ts":"1608095281"},"2":{"get_star_ts":"1608097299"}},"3":{"2":{"get_star_ts":"1606985637"},"1":{"get_star_ts":"1606985401"}},"9":{"1":{"get_star_ts":"1607495809"},"2":{"get_star_ts":"1607496144"}},"5":{"1":{"get_star_ts":"1607148767"},"2":{"get_star_ts":"1607149021"}}},"stars":50,"name":"printfn","global_score":0,"id":"22105"}},"event":"2020"}</textarea>
     <p id="errors"></p>
     <div class="chart-container" style="position: relative">
         <canvas id="chart"></canvas>
