--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@ let borderColors = [
     'rgba(255, 159, 64, 1)'
 ];
 
+function loadData(data) {
+    document.getElementById('json').innerText = JSON.stringify(data);
+}
+
 function updateGraph() {
     try {
         let leaderboardData = JSON.parse(document.getElementById('json').value);
@@ -250,12 +254,14 @@ textarea {
 <body>
 
 <div id="wrap">
-    <textarea id="json">{"event":"2020","members":{"22105":{"local_score":142,"name":"printfn","last_star_ts":"1608873180","stars":50,"id":"22105","completion_day_level":{"15":{"1":{"get_star_ts":"1608009169"},"2":{"get_star_ts":"1608010763"}},"25":{"2":{"get_star_ts":"1608873180"},"1":{"get_star_ts":"1608873169"}},"24":{"1":{"get_star_ts":"1608861205"},"2":{"get_star_ts":"1608861747"}},"6":{"1":{"get_star_ts":"1607231287"},"2":{"get_star_ts":"1607231562"}},"13":{"2":{"get_star_ts":"1607837445"},"1":{"get_star_ts":"1607836055"}},"22":{"2":{"get_star_ts":"1608614668"},"1":{"get_star_ts":"1608613508"}},"17":{"2":{"get_star_ts":"1608184324"},"1":{"get_star_ts":"1608183533"}},"12":{"1":{"get_star_ts":"1607755740"},"2":{"get_star_ts":"1607756348"}},"21":{"1":{"get_star_ts":"1608533890"},"2":{"get_star_ts":"1608534373"}},"11":{"2":{"get_star_ts":"1607671025"},"1":{"get_star_ts":"1607670211"}},"2":{"1":{"get_star_ts":"1606885392"},"2":{"get_star_ts":"1606885508"}},"5":{"1":{"get_star_ts":"1607148767"},"2":{"get_star_ts":"1607149021"}},"18":{"1":{"get_star_ts":"1608282736"},"2":{"get_star_ts":"1608283970"}},"1":{"2":{"get_star_ts":"1606805157"},"1":{"get_star_ts":"1606805081"}},"16":{"2":{"get_star_ts":"1608097299"},"1":{"get_star_ts":"1608095281"}},"19":{"1":{"get_star_ts":"1608360572"},"2":{"get_star_ts":"1608365456"}},"20":{"2":{"get_star_ts":"1608446246"},"1":{"get_star_ts":"1608444729"}},"7":{"1":{"get_star_ts":"1607317927"},"2":{"get_star_ts":"1607318873"}},"4":{"1":{"get_star_ts":"1607065548"},"2":{"get_star_ts":"1607066426"}},"14":{"1":{"get_star_ts":"1607922723"},"2":{"get_star_ts":"1607923196"}},"23":{"2":{"get_star_ts":"1608702846"},"1":{"get_star_ts":"1608700564"}},"3":{"2":{"get_star_ts":"1606985637"},"1":{"get_star_ts":"1606985401"}},"10":{"2":{"get_star_ts":"1607578636"},"1":{"get_star_ts":"1607576918"}},"9":{"1":{"get_star_ts":"1607495809"},"2":{"get_star_ts":"1607496144"}},"8":{"1":{"get_star_ts":"1607407596"},"2":{"get_star_ts":"1607407937"}}},"global_score":0},"420711":{"completion_day_level":{"7":{"1":{"get_star_ts":"1607323202"},"2":{"get_star_ts":"1607324110"}},"13":{"2":{"get_star_ts":"1607843597"},"1":{"get_star_ts":"1607839838"}},"4":{"2":{"get_star_ts":"1607085511"},"1":{"get_star_ts":"1607071090"}},"14":{"2":{"get_star_ts":"1607936872"},"1":{"get_star_ts":"1607933511"}},"6":{"2":{"get_star_ts":"1607231954"},"1":{"get_star_ts":"1607231855"}},"12":{"1":{"get_star_ts":"1607836873"},"2":{"get_star_ts":"1607837743"}},"3":{"2":{"get_star_ts":"1606988302"},"1":{"get_star_ts":"1606986986"}},"10":{"1":{"get_star_ts":"1607577723"},"2":{"get_star_ts":"1607583086"}},"11":{"2":{"get_star_ts":"1607674031"},"1":{"get_star_ts":"1607671711"}},"2":{"2":{"get_star_ts":"1606887453"},"1":{"get_star_ts":"1606887172"}},"1":{"2":{"get_star_ts":"1606817713"},"1":{"get_star_ts":"1606817175"}},"5":{"2":{"get_star_ts":"1607185713"},"1":{"get_star_ts":"1607184997"}},"9":{"1":{"get_star_ts":"1607574553"},"2":{"get_star_ts":"1607576481"}},"8":{"1":{"get_star_ts":"1607428072"},"2":{"get_star_ts":"1607431483"}}},"id":"420711","last_star_ts":"1607936872","stars":28,"local_score":50,"name":"Jamie","global_score":0},"225901":{"global_score":0,"completion_day_level":{"4":{"2":{"get_star_ts":"1607230299"},"1":{"get_star_ts":"1607219099"}},"6":{"1":{"get_star_ts":"1607231047"},"2":{"get_star_ts":"1607231247"}},"7":{"1":{"get_star_ts":"1608882459"},"2":{"get_star_ts":"1608882788"}},"8":{"2":{"get_star_ts":"1608889870"},"1":{"get_star_ts":"1608883981"}},"5":{"1":{"get_star_ts":"1607229175"},"2":{"get_star_ts":"1607229941"}},"1":{"2":{"get_star_ts":"1606825183"},"1":{"get_star_ts":"1606825135"}},"2":{"1":{"get_star_ts":"1607217004"},"2":{"get_star_ts":"1607217254"}},"3":{"1":{"get_star_ts":"1607218043"},"2":{"get_star_ts":"1607218453"}}},"stars":16,"last_star_ts":"1608889870","id":"225901","name":"Rhys Davies","local_score":18}},"owner_id":"225901"}</textarea>
+    <textarea id="json"></textarea>
     <p id="errors"></p>
     <div class="chart-container" style="position: relative">
         <canvas id="chart"></canvas>
     </div>
 </div>
+
+<script src="data.js"></script>
 
 </body>
 </html>
